030-software/fluxcd/apps/sign-pdf/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sign-pdf
  labels:
    namespace: sign-pdf
