030-software/fluxcd/apps/sign-pdf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sign-pdf
  annotations:
    configmap.reloader.stakater.com/reload: "scripts"
spec:
  selector:
    matchLabels:
      app: sign-pdf
  template:
    metadata:
      labels:
        app: sign-pdf
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sign-pdf
          image: shokohsc/signaturepdf:latest
          command:
            - /usr/bin/entrypoint.sh
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 1024M
          volumeMounts:
            - name: scripts
              mountPath: /usr/bin/entrypoint.sh
              subPath: entrypoint.sh
            - name: config
              mountPath: /etc/apache2/sites-available/000-default.conf
              subPath: signaturepdf.conf
      volumes:
        - name: scripts
          configMap:
            name: scripts
            defaultMode: 0755
        - name: config
          configMap:
            name: config
            defaultMode: 0644
