030-software/fluxcd/apps/sign-pdf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sign-pdf
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sign-pdf
