030-software/fluxcd/apps/sign-pdf/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sign-pdf
spec:
  hostnames:
  - sign-pdf.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: sign-pdf
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
